Fixed overlapping home icon in top_nav

--- a/_scss/_team4-override.scss
+++ b/_scss/_team4-override.scss
@@ -38,3 +38,8 @@ body,html{
 .stage-nav{
     margin-bottom:5px;
 }
+
+
+.nav_bar .foundicon-home{
+    right: 7px;
+}
